Added caption to DALYs figure (figure 3)

--- a/methodsPaper/tex/materialsAndMethods.tex
+++ b/methodsPaper/tex/materialsAndMethods.tex
@@ -38,7 +38,9 @@ activity is required for cycling and walking.
 
 \begin{figure}[t]
   \centerline{\includegraphics[width=\textwidth]{./figures/fig3.pdf}}
-    \caption{}\label{fig3}
+  \caption{Estimates for disease burden nationwide in terms of thousands of
+    DALYs for each of the six diseases included in the model.
+  }\label{fig3}
 \end{figure}
 
 % does this involve using the CDC Wonder data? we could add a bit here
