Edits to Introduction of Methods Paper

--- a/methodsPaper/tex/introduction.tex
+++ b/methodsPaper/tex/introduction.tex
@@ -2,7 +2,7 @@ Regular exercise has been shown to provide health benefits in terms of
 chronic disease prevention \cite{warburton2006}, cognitive function
 \cite{hillman2008}, and overall well being and satisfaction with life
 \cite{maher2013}. Still only half of Americans obtain the recommended
-levels of aerobic activity, which is 2.5 hours per week. There is
+levels of aerobic activity of 2.5 hours per week. There is
 considerable variability in the attainment of this goal by location
 within the country. Supportive local built and policy environments are
 important determinants of population-level activity
@@ -35,12 +35,6 @@ implementation of the active transport component by including the
 distribution of non-travel-related activity, improving numerical
 precision when computing the population attributable fraction and
 creating a simple user-interface for the custom-built \R{} package
-\package{}.
-
-Here we present this implementation using publicly-available
-datasets with coverage of the entire United States, and investigate
-the sensitivity of the model outputs to variability in the input
-parameters. The results of this work suggest that statistical modeling
-and tools like the custom-built \R{} package \package{} can improve
-the application of this useful methodology and increase its utility to
-both practicioners and researchers.
+\package{}.  We present this implementation here by using it to
+estimate the relationship between overall, nationwide disease burden
+and active transportation time in the United States.
