--- a/tex/sgy.tex
+++ b/tex/sgy.tex
@@ -12,3 +12,4 @@
 \newcommand{\pEm}[1]{$\mathrm{PM}_{#1}$}
 \newcommand{\vmt}{$\mathrm{VMT}$}
 \newcommand{\logNormal}{log-normal}
+\newcommand{\RR}{\mathrm{RR}}
