Added logNormalMath to sgy.tex

--- a/tex/sgy.tex
+++ b/tex/sgy.tex
@@ -12,4 +12,5 @@
 \newcommand{\pEm}[1]{$\mathrm{PM}_{#1}$}
 \newcommand{\vmt}{$\mathrm{VMT}$}
 \newcommand{\logNormal}{log-normal}
+\newcommand{\logNormalMath}{\log\mathcal{N}}
 \newcommand{\RR}{\mathrm{RR}}
