--- a/methodsPaper/tex/materialsAndMethods.tex
+++ b/methodsPaper/tex/materialsAndMethods.tex
@@ -6,10 +6,12 @@ the baseline model and a given alternative scenario, i.e., the
 population attributable fraction, $\af$.  The population attributable
 fraction is defined below and computed for each disease included in
 the model, namely Breast Cancer, Colon Cancer, Depression, Dementia,
-Diabetes and Cardiovascular disease.
+Diabetes and Cardiovascular disease.  For readability we omit an index
+indicating disease.
 
 \begin{equation}
-\af = \frac{\int \! R(x)P(x) \, \mathrm{d}x  - \int \! R(x)Q(x) \, \mathrm{d}x}{\int \! R(x)P(x) \, \mathrm{d}x}
+\af = \frac{\int \! R(x)P(x) \, \mathrm{d}x  - \int \! R(x)Q(x) \,
+  \mathrm{d}x}{\int \! R(x)P(x) \, \mathrm{d}x} \label{paf}
 \end{equation}
 
 Here $R(x)$ represents the risk when the individual has exposure $x$,
@@ -17,55 +19,54 @@ physical activity (\mets).  $P(x)$ and $Q(x)$ denote the population
 density of individuals with exposure $x$, in the baseline and
 alternate scenarios, respectively.  The exposure variable, $x$, is
 modeled as the sum of two independent random variables, travel-related
-exposure and non-travel-related exposure.  Non-travel-related exposure
-is modeled with a \logNormal{} distribution with the age-sex specific
-mean ratios for non-travel-related exposure are estimated from the
-ATUS \cite{ATUS}.  The referent group mean is treated as a variable
-and the coefficient of variation is treated as constant across age-sex
-strata and estimated with ATUS.  The distribution for travel-related
-exposure is estimated from the time spent walking or cycling, i.e.,
-active transport time, which as in the original ITHIM model has
-a \logNormal{} distribution with constant coefficient of variation
-across age-sex strata.  Travel-related exposure is estimated from
-active transport time using assumptions about how much physical
-activity is required for cycling and walking.
+and non-travel-related physical activity.
 
-\paragraph{Approximation of $\af$ Integral}
+\paragraph{Non-Travel-Related Physical Activity}
 
 \begin{equation}
-1 - \af \approx \frac{\sum R(x_i)}{\sum R(x_i^\prime)}
+X_{ij}^{\mathrm{non-travel}} \sim \logNormalMath\left(\mu_{ij}, \gamma \mu_{ij}\right)
 \end{equation}
 
-\paragraph{Disease Burden Estimation}
+Within each age-sex class the non-travel-related exposure is modeled
+with a \logNormal{} distribution.  The age-sex specific mean ratios,
+$r_{ij} = \frac{\mu_{ij}}{\mu_0}$ and $\gamma$ are estimated from the
+American Time USe Survey data \cite{ATUS}.
+
+\paragraph{Travel-Related Physical Activity}
+
+The distribution for travel-related exposure is estimated from the
+time spent walking or cycling, i.e., active transport time, which as
+in the original ITHIM model is assigned a \logNormal{} distribution
+with constant coefficient of variation across age-sex classes.
+Travel-related exposure is estimated from active transport time using
+assumptions about how much physical activity is required for cycling
+and walking.
+
+\paragraph{Estimation of Disease Burden}
+
+To estimate the disease burden we first approximate the population
+attributable fraction through a discretization of the integral in
+equation \ref{paf}.  
+
+
+With a simulated distribution for total physical activity in hand we
+compute the empirical percentiles in the baseline and alternate
+scenarios, $\mathbf{x}$ and $\mathbf{x}^\prime$. The proportional
+change in disease burden, $\delta$, may be approximated as follows,
+where $R$ is the risk function for total activity.
+
 \begin{equation}
-B_1 = B_0(1-\af)\frac{\RR_1}{\sum_j \RR_j}
+\delta = 1 - \af \approx \frac{\sum R(x_i)}{\sum R(x_i^\prime)}
 \end{equation}
 
-$B_j = \gamma_jB_1$, where $\gamma_i = \frac{\RR_i}{\RR_1}$.  The
-overall burden is then computed as the sum across quintiles,
-$B=\sum B_j$.  Finally, $B_0$ is estimated from CDC data\ldots
+The disease burden, in this case DALYs, is found for each of the
+percentiles using equation \ref{burden}, using $B_0$, the overall nation-wide burden for
+the baseline.  The overall burden is then computed as the sum across
+quintiles, $B=\sum_{j=1}^n B_j$.
 
-
-\begin{figure}[t]
-  \centerline{\includegraphics[width=\textwidth]{./figures/fig1}}
-    \caption{}\label{fig1}
-\end{figure}
-
-\begin{figure}[t]
-  \centerline{\includegraphics[width=\textwidth]{./figures/fig2.pdf}}
-    \caption{}\label{fig2}
-\end{figure}
-
-\begin{figure}[t]
-  \centerline{\includegraphics[width=\textwidth]{./figures/fig3.pdf}}
-  \caption{Estimates for disease burden nationwide in terms of thousands of
-    DALYs for each of the six diseases included in the model.
-  }\label{fig3}
-\end{figure}
-
-% does this involve using the CDC Wonder data? we could add a bit here
-% about it, but if this is just national estimtes and shifts perhaps
-% we don't need it.
+\begin{equation}
+B_j = \delta B_0\frac{\RR_j}{\sum_{k=1}^n \RR_k}\label{burden}
+\end{equation}
 
 For the purposes of this implementation we limited our analyses to
 metropolitan regions of the United States. To idenfity urban
@@ -97,3 +98,20 @@ rate ratios \cite{maizlish2013}. Age, sex, and casuse specific
 mortalities were obtained form the CDC WONDER database for US metro
 counties for the years 2010-2014. Cells with less than 10 deaths were
 imputed using R's random integer generator.
+
+\begin{figure}[t]
+  \centerline{\includegraphics[width=\textwidth]{./figures/fig1}}
+    \caption{}\label{fig1}
+\end{figure}
+
+\begin{figure}[t]
+  \centerline{\includegraphics[width=\textwidth]{./figures/fig2.pdf}}
+    \caption{}\label{fig2}
+\end{figure}
+
+\begin{figure}[t]
+  \centerline{\includegraphics[width=\textwidth]{./figures/fig3.pdf}}
+  \caption{Estimates for disease burden nationwide in terms of thousands of
+    DALYs for each of the six diseases included in the model.
+  }\label{fig3}
+\end{figure}
