--- a/methodsPaper/tex/results.tex
+++ b/methodsPaper/tex/results.tex
@@ -1,3 +1,16 @@
+We report total change (averted or increased) in diability adjusted
+life years (DALYs) as an estimate of dissease burden change with
+alternative scenarios.
+
+To estimate DALYs we use a methodology adopted from previous US
+implementations of ITHIM which scale Global Budern of Disease
+Estimates for the US to smaller populations using mortality rate
+ratios \cite{maizlish2013}. Age, sex, and casuse specific mortalities
+were obtained form the CDC WONDER database for US metro counties for
+the years 2010-2014. Cells with less than 10 deaths were imputed using
+R's random integer generator.
+
+
 Our subset of the US population to only metropolitan counties
 consisted of 1,090 of 3,141 (34.7\%) counties, or ???X??? of ???Y???
 (???Z???\%) of the total US population. The age and gender
