--- a/methodsPaper/tex/materialsAndMethods.tex
+++ b/methodsPaper/tex/materialsAndMethods.tex
@@ -32,6 +32,26 @@ with a \logNormal{} distribution.  The age-sex specific mean ratios,
 $r_{ij} = \frac{\mu_{ij}}{\mu_0}$ and $\gamma$ are estimated from the
 American Time USe Survey data \cite{ATUS}.
 
+% latex table generated in R 3.3.1 by xtable 1.8-2 package
+% Tue Nov  8 09:38:46 2016
+\begin{table}[ht]
+\centering
+\begin{tabular}{rrr}
+  \hline
+ & M & F \\
+  \hline
+0-4 & 0.00 & 0.00 \\
+  5-14 & 0.00 & 0.00 \\
+  15-29 & 0.97 & 1.00 \\
+  30-44 & 1.04 & 1.12 \\
+  45-59 & 0.95 & 0.99 \\
+  60-69 & 0.90 & 0.94 \\
+  70-79 & 0.83 & 0.88 \\
+  80+ & 0.72 & 0.77 \\
+   \hline
+\end{tabular}
+\end{table}
+
 \paragraph{Travel-Related Physical Activity}
 
 The distribution for travel-related exposure is estimated from the
@@ -46,7 +66,7 @@ and walking.
 
 To estimate the disease burden we first approximate the population
 attributable fraction through a discretization of the integral in
-equation \ref{paf}.  
+equation \ref{paf}.
 
 
 With a simulated distribution for total physical activity in hand we
