Created Dose-Response Figure and tweaked Figure 1 from Methods Paper

--- a/R/ITHIM.Rmd
+++ b/R/ITHIM.Rmd
@@ -10,7 +10,7 @@ results, questions, interpreations, notes, etc.-->
 
 ```{r libs, eval = TRUE, echo = FALSE, results = "hide", warning = FALSE, error = FALSE, message = FALSE}
 options(repos='http://cran.rstudio.com/')
-install.packages(c("knitr","ggplot2","dplyr","openssl","httr", "git2r", "devtools", "roxygen2"))
+#install.packages(c("knitr","ggplot2","dplyr","openssl","httr", "git2r", "devtools", "roxygen2"))
 library("ggplot2")
 library("devtools")
 library("reshape2")
@@ -38,7 +38,7 @@ First we use NHTS to estimate mean walking and cycling times.
 ### NHTS
 
 ```{r compute, echo = FALSE, eval = TRUE}
-compute <- TRUE
+compute <- FALSE
 ```
 
 #### Create a handful of functions to help parse data
@@ -393,8 +393,8 @@ ITHIM.scenario.quints <- updateITHIM(ITHIM.scenario, "quantiles", seq(1,9,by=1)/
 pWalk <- ITHIM.national$means$pWalk[3,2]
 
 DALYs <- c(); DALYs.quints <- c();
-atVec <- seq(35, 120, length.out = 10)
-muNonTravelVec <- c(1, 5, 10)
+atVec <- seq(37.5, 120, length.out = 10)
+muNonTravelVec <- c(1, 10, 25)
 DTotal <- data.frame()
 
 for(at in atVec ){  # minutes active transport/week
@@ -420,15 +420,12 @@ for(at in atVec ){  # minutes active transport/week
   }
 }
 
-DTotal <- within(DTotal, muNonTravel <- factor(muNonTravel, levels = c(1,5,10), labels = c("low","medium","high")))
+DTotal <- within(DTotal, muNonTravel <- factor(muNonTravel, levels = as.character(muNonTravelVec), labels = c("low","medium","high")))
 DTotal <- subset(DTotal, quants == "percentiles")
 
 
-p <- ggplot(DTotal, aes(x = at, y = -DALYs/1e3, colour = muNonTravel), colour = muNonTravel)
-p + geom_line() + geom_point() + theme_bw() + scale_y_continuous(name="DALYs Averted Nationwide (Thousands)") + scale_x_continuous(name="Active Transport (minutes/week) (Referent Group)") + theme(axis.text.x  = element_text(angle = 90, vjust = 0.5, size = 8)) #+ facet_grid( . ~ muNonTravel)
-
-
-#p + stat_smooth( method = loess) + geom_point() + theme_bw() + scale_y_continuous(name="DALYs Averted Nationwide (Thousands)") + scale_x_continuous(name="Active Transport (minutes/week) (Referent Group)") + theme(axis.text.x  = element_text(angle = 90, vjust = 0.5, size = 8)) #+ facet_grid( . ~ muNonTravel)
+p <- ggplot(DTotal, aes(x = at, y = -DALYs/1e3, colour = muNonTravel))
+p + geom_line() + geom_point() + theme_bw() + scale_y_continuous(name="DALYs Averted Nationwide (Thousands)") + scale_x_continuous(name="Active Transport (minutes/week) (Referent Group)")  + scale_colour_discrete(name="Baseline Activity") #+ theme(axis.text.x  = element_text(angle = 90, vjust = 0.5, size = 8))
 
 ```
 
@@ -548,4 +545,24 @@ METmatrix <- METmatrix[,c("male","female")]
 
 METmatrix <- METmatrix/METmatrix[3,2]
 
+```
+
+```{r doseresponse, eval = TRUE, dev=c('pdf', 'png'), fig.width = fig.width, fig.asp = 1/phi, echo = TRUE, warning = FALSE}
+RR1vec <- unique(unlist(createActiveTransportRRs()))
+lapply(createActiveTransportRRs(),function(x) lapply(x, function(x) unique(c(x))))
+#~~~~~~~~~~~~~~~~~~~~~~~
+# Manual bullshit!
+#~~~~~~~~~~~~~~~~~~~~~~~
+RR1vec <- RR1vec[RR1vec != 1]
+names(RR1vec) <- c("BreastCancer","ColonCancer.M","ColonCancer.F", "CVD", "Dementia", "Depression.young", "Depression.old", "Diabetes")
+
+RRx <- function(x, RR1, k) exp(log(RR1)*x^k)
+x <- seq(0,25,0.1)
+RRmat <- outer(x, RR1vec, RRx, k = 0.5)
+rownames(RRmat) <- x
+D <- melt(RRmat)
+names(D) <- c("x","disease","RR")
+
+p <- ggplot(D, aes(x = x, y = RR, colour = disease))
+p + geom_line()  + theme_bw() + scale_y_continuous(name="Relative Risk") + scale_x_continuous(name="Physical Activity (MET-hrs./week)")
 ```
