--- a/R/ITHIM.Rmd
+++ b/R/ITHIM.Rmd
@@ -339,24 +339,24 @@ foobar1 <- data.frame(cbind(melt(foo1$daly.delta),paste0("ageClass",1:8)),State 
 foobar <- foobar1
 names(foobar) <- c("delta.DALY","Sex","Disease","ageClass","State")
 
-## ITHIM.NY <- ITHIMList[["NY"]]
-## ITHIM.NY <- updateITHIM(ITHIM.NY, parName = "muNonTravel", 10)
-## foo2 <- compareModels(ITHIM.national,ITHIM.NY)
-## foobar2 <- data.frame(cbind(melt(foo2$daly.delta),paste0("ageClass",1:8)),State = "NY")
-## foobar <- rbind(foobar1,foobar2)
-## names(foobar) <- c("delta.DALY","Sex","Disease","ageClass","State")
+ITHIM.NY <- ITHIMList[["NY"]]
+ITHIM.NY <- updateITHIM(ITHIM.NY, parName = "muNonTravel", 10)
+foo2 <- compareModels(ITHIM.national,ITHIM.NY)
+foobar2 <- data.frame(cbind(melt(foo2$daly.delta),paste0("ageClass",1:8)),State = "NY")
+foobar <- rbind(foobar1,foobar2)
+names(foobar) <- c("delta.DALY","Sex","Disease","ageClass","State")
 
 foobar <- within(foobar, {
   Disease[Disease == "BreastCancer"] <- "Breast Cancer"
   Disease[Disease == "ColonCancer"] <- "Colon Cancer"
-  Disease <- factor(Disease, levels = c("Breast Cancer", "Colon Cancer", "Dementia", "Depression", "Diabetes"))
+  Disease <- factor(Disease, levels = c("Breast Cancer", "Colon Cancer", "Dementia", "Depression", "Diabetes", "CVD"))
 })
 
-p <- ggplot( subset(foobar,ageClass != "ageClass1"), aes(ageClass,-delta.DALY/1e3, fill = Sex) )
+p <- ggplot( subset(foobar,ageClass != "ageClass1"), aes(ageClass,-delta.DALY/1e3, fill = State))
 
 p + geom_bar(stat="identity", position = "dodge") +
 theme(axis.title=element_blank()) +
-facet_grid( Disease ~ ., scales = "free") +
+facet_grid( Disease ~ Sex, scales = "free" ) +
 scale_y_continuous(name="DALYs Averted Nationwide (Thousands)") +
 scale_x_discrete(name="", labels = c("5-14","15-29","30-44","45-59","60-69","70-79","80+"))
 
@@ -393,7 +393,7 @@ ITHIM.scenario.quints <- updateITHIM(ITHIM.scenario, "quantiles", seq(1,9,by=1)/
 pWalk <- ITHIM.national$means$pWalk[3,2]
 
 DALYs <- c(); DALYs.quints <- c();
-atVec <- seq(37.5, 120, length.out = 10)
+atVec <- seq(45, 120, length.out = 10)
 muNonTravelVec <- c(1, 10, 25)
 DTotal <- data.frame()
 
@@ -450,7 +450,7 @@ names(D) <- c("disease","sex","ageClass","type","burden", "sex2", "disease2")
 D <- within(D, sex <- factor(sex, levels = c("F","M")))
 
 p <- ggplot(subset(D, disease %in% c("BreastCancer","ColonCancer","Dementia","Depression","Diabetes", "CVD") & type == "daly"), aes(x = ageClass, y = burden/1e3, fill = sex)) + geom_bar(stat= "identity", position = "dodge")
-p + theme_bw() + scale_x_discrete(name="", labels = c("0-4","5-14","15-29","30-44","45-59","60-69","70-79","80+")) + scale_y_continuous(name="Nationwide Burden (thousands)") + theme(axis.text.x  = element_text(angle = 90, vjust = 0.5, size = 8)) + facet_grid( . ~ disease, scales = "free_y")
+p + theme_bw() + scale_x_discrete(name="", labels = c("0-4","5-14","15-29","30-44","45-59","60-69","70-79","80+")) + scale_y_continuous(name="DALYs Nationwide (thousands)") + theme(axis.text.x  = element_text(angle = 90, vjust = 0.5, size = 8)) + facet_grid( . ~ disease, scales = "free_y")
 ```
 
 ## Non-Travel METs
