--- a/R/ITHIM.Rmd
+++ b/R/ITHIM.Rmd
@@ -358,7 +358,9 @@ p + geom_bar(stat="identity", position = "dodge") +
 theme(axis.title=element_blank()) +
 facet_grid( Disease ~ Sex, scales = "free" ) +
 scale_y_continuous(name="DALYs Averted Nationwide (Thousands)") +
-scale_x_discrete(name="", labels = c("5-14","15-29","30-44","45-59","60-69","70-79","80+"))
+scale_x_discrete(name="", labels = c("5-14","15-29","30-44","45-59","60-69","70-79","80+")) +
+theme(axis.text.x  = element_text(angle=90, vjust=0.5, size=6)) +
+scale_fill_manual(values=c("#CC6666", "#9999CC"))
 
 ```
 
