--- a/R/ITHIM.Rmd
+++ b/R/ITHIM.Rmd
@@ -177,6 +177,105 @@ muwtList <- lapply( meanWalkList, function(x) ifelse(x[3,2]==0,1e-3, x[3,2]))
 muctList <- lapply( meanCycleList, function(x) ifelse(x[3,2]==0,1e-3, x[3,2]))
 ```
 
+## Non-Travel METs
+
+```{r newMETs, echo = TRUE, eval = TRUE, echo = FALSE}
+newMETsFile <- "ATUS_to_METS_key.csv"
+
+newMETsFile <- system.file(newMETsFile, package="ITHIM")
+
+newMETs <- read.csv(file = newMETsFile, stringsAsFactors = FALSE, colClasses = c("character","character","character","character","numeric","character","character","character"))
+dataColumns <- c(1,5)
+D <- newMETs[,dataColumns]
+metaData <- newMETs[,-dataColumns]
+newMETs <- list(Data = D, metaData = metaData)
+activityCode <- ifelse(nchar(newMETs$Data$X6.digit.activity.code)==5,paste0("t0",newMETs$Data$X6.digit.activity.code),paste0("t",newMETs$Data$X6.digit.activity.code))
+
+rownames(newMETs$Data) <- activityCode
+rownames(newMETs$metaData) <- activityCode
+
+newMETs$metaData <- within(newMETs$metaData, {
+  Travel.related..Y.N. <- as.factor(Travel.related..Y.N.)
+})
+
+metKey <- newMETs$Data$AinsworthMETS
+names(metKey) <- activityCode
+
+
+```
+
+```{r readnewMETs, echo = TRUE, eval = TRUE, echo = FALSE}
+cpsFile <- "~/GHI/data/ATUS/atuscps_2015.dat"
+cps <- read.table(cpsFile, header=T, skip=0, sep="," )
+cps <- within(cps, {
+    TUCASEID <- as.character(TUCASEID)
+    TULINENO <- as.character(TULINENO)
+    GEREG <- as.factor(GEREG)
+    })
+cps <- subset(cps, TULINENO == "1")
+
+summaryFile <- "~/GHI/data/ATUS/atussum_2015.dat"
+summary <- read.table(summaryFile, header=T, skip=0, sep=",")
+metaDataColumns <- 1:24
+summaryList <- list(Data = summary[,-metaDataColumns], metaData = summary[,metaDataColumns])
+
+summaryList$metaData <- within(summaryList$metaData,{
+    TESEX <- as.factor(ifelse(TESEX == 1, "male", ifelse(TESEX == 2, "female",NA)))
+    AGECAT <- ifelse(TEAGE <5, "00-04",
+                     ifelse(TEAGE > 4 & TEAGE < 15, "05-14",
+                     ifelse(TEAGE > 14 & TEAGE < 30, "15-29",
+                     ifelse(TEAGE > 29 & TEAGE < 45, "30-44",
+                     ifelse(TEAGE > 44 & TEAGE < 60, "45-59",
+                     ifelse(TEAGE > 59 & TEAGE < 70, "60-69",
+                     ifelse(TEAGE > 69 & TEAGE < 80, "70-79", "80+"
+                            )))))))})
+
+
+```
+
+We shift the MET estimates by the minimum value so that the new minimum MET estimate is zero.
+
+```{r metKey, echo = TRUE, eval = TRUE, echo = FALSE}
+allActivities <- colnames(summaryList$Data)
+nonTravelActivities <- rownames(newMETs$metaData)[which(newMETs$metaData$Travel.related..Y.N. == "N")]
+nonTravelActivities <- nonTravelActivities[which(nonTravelActivities %in% allActivities)]
+
+activities <- nonTravelActivities
+
+metKeyVector <- (metKey[activities] - min(metKey, na.rm = TRUE))/60*7
+names(metKeyVector) <- activities
+metKeyMatrix <- matrix(metKeyVector, nrow = nrow(summaryList$Data), ncol = length(metKeyVector), byrow = TRUE)
+dimnames(metKeyMatrix) <- list( NULL, activities)
+
+
+METs <- data.frame(METs = rowSums(summaryList$Data[,activities] * metKeyMatrix[,activities], na.rm = TRUE), AGE = summaryList$metaData$TEAGE, SEX = summaryList$metaData$TESEX, AGECAT = summaryList$metaData$AGECAT, row.names = summaryList$metaData$TUCASEID )
+
+D <- merge(cps, METs, by.y = "row.names", by.x = "TUCASEID")
+ggplot(D, aes(x = METs, ..density.., colour = AGECAT)) + geom_freqpoly(binwidth = 10) + facet_grid( SEX ~ .) + labs(x = "Non-Travel Marginal MET-hrs./week", colour = "Age") + coord_cartesian(xlim = c(0, 400))
+
+```
+
+```{r parameters, eval = TRUE, echo = FALSE}
+parameters <- ddply(D, .(SEX, AGECAT), summarise,
+             mean = mean(METs, na.rm=T),
+             sd = sd(METs, na.rm=T)
+             )
+
+METmatrix <- rbind(matrix(0,nrow = 2, ncol = 2), matrix(parameters$mean, ncol = 2))
+
+colnames(METmatrix) <- c(as.character(parameters$SEX[1]),as.character(rev(parameters$SEX)[1]))
+
+METmatrix <- METmatrix[,c("male","female")]
+
+METmatrix <- METmatrix/METmatrix[3,2]
+METmatrix[2,] <- METmatrix[3,]
+rownames(METmatrix) <- paste0("ageClass",1:8)
+colnames(METmatrix) <- c("M","F")
+METmatrix
+```
+
+
+
 
 ## Create List of ITHIM Objects
 
@@ -199,6 +298,7 @@ ITHIM.default <- createITHIM()
 ITHIM.default <- updateITHIM(ITHIM.default, "cvNonTravel", 3)
 ITHIM.default <- updateITHIM(ITHIM.default, "cv", 1.65)
 ITHIM.default <- updateITHIM(ITHIM.default, "muNonTravel", 4)
+ITHIM.default <- updateITHIM(ITHIM.default, "muNonTravelMatrix", METmatrix)
 ITHIM.default <- updateITHIM(ITHIM.default, "quantiles", (1:99)/100)
 
 ITHIM.national <- ITHIM.default
@@ -243,57 +343,6 @@ p + stat_smooth( method = loess) + theme_bw() + scale_x_continuous(name="Mean No
 
 ```
 
-Do it again, but with quintiles
-
-```{r ITHIMObjsQuintiles, eval = TRUE, dev=c('pdf', 'png'), fig.width = fig.width, fig.asp = 1/phi, echo = TRUE, warning = FALSE}
-DALYsTotal2 <- data.frame()
-ITHIMList <- list()
-
-ITHIM.default <- updateITHIM(ITHIM.default, "quantiles", seq(1, 9, by = 2)/10 )
-
-ITHIM.national <- ITHIM.default
-ITHIM.national <- updateITHIM(ITHIM.national, "muwt", muwtNational)
-ITHIM.national <- updateITHIM(ITHIM.national, "muct", muctNational)
-ITHIM.national <- updateITHIM(ITHIM.national, "Rwt", RwtNational)
-ITHIM.national <- updateITHIM(ITHIM.national, "Rct", RctNational)
-
-for (HHSTATE in stateVec){
-    ITHIMList[[HHSTATE]] <- ITHIM.default
-    ITHIMList[[HHSTATE]] <- updateITHIM(ITHIMList[[HHSTATE]], "muwt", muwtList[[HHSTATE]])
-    ITHIMList[[HHSTATE]] <- updateITHIM(ITHIMList[[HHSTATE]], "muct", muctList[[HHSTATE]])
-    ITHIMList[[HHSTATE]] <- updateITHIM(ITHIMList[[HHSTATE]], "Rwt", RwtList[[HHSTATE]])
-    ITHIMList[[HHSTATE]] <- updateITHIM(ITHIMList[[HHSTATE]], "Rct", RctList[[HHSTATE]])
-    ITHIMList[[HHSTATE]] <- updateITHIM(ITHIMList[[HHSTATE]], "GBD", ITHIM.national$parameters$GBD)
-  }
-
-for( muNonTravel in seq(0, upper, by = wd)){
-
-  rm(DALYs)
-
-  for (HHSTATE in stateVec){
-    ITHIMList[[HHSTATE]] <- updateITHIM(ITHIMList[[HHSTATE]], "muNonTravel", muNonTravel)
-  }
-
-  ITHIM.national <- updateITHIM(ITHIM.national, "muNonTravel", muNonTravel)
-
-  DALYs <- lapply(ITHIMList, sumDALY, ITHIM.baseline = ITHIM.national)
-  DALYs <- data.frame(State = names(DALYs), muNonTravel = muNonTravel, DALY = unlist(DALYs))
-  DALYsTotal2 <- rbind(DALYsTotal2, DALYs)
-}
-
-DALYsTotal2 <- within(DALYsTotal2, {
-  State <- factor(State, levels = stateVecOrdered)
-})
-
-DALYsTotal <- rbind(data.frame(DALYsTotal,quints="Percentiles"), data.frame(DALYsTotal2,quints="Quintiles"))
-
-p <- ggplot(DALYsTotal, aes(x = muNonTravel, y = DALY/1e3, colour = State))
-
-p + stat_smooth( method = loess) + theme_bw() + scale_x_continuous(name="Mean Non-Travel METs (MET-hrs./week) (Referent Group)") + scale_y_continuous(name="Change in National DALYs (Thousands)") + coord_cartesian(xlim = c(0, upper)) + facet_grid( . ~ quints)
-
-p + stat_smooth( method = loess) + theme_bw() + scale_x_continuous(name="Mean Non-Travel METs (MET-hrs./week) (Referent Group)") + scale_y_continuous(name="Change in National DALYs (Thousands)") + coord_cartesian(xlim = c(0, upper)) + geom_point() + facet_grid( . ~ quints)
-
-```
 
 
 ### Visualization of trip time matrices
@@ -452,108 +501,16 @@ names(D) <- c("disease","sex","ageClass","type","burden", "sex2", "disease2")
 D <- within(D, sex <- factor(sex, levels = c("F","M")))
 
 p <- ggplot(subset(D, disease %in% c("BreastCancer","ColonCancer","Dementia","Depression","Diabetes", "CVD") & type == "daly"), aes(x = ageClass, y = burden/1e3, fill = sex)) + geom_bar(stat= "identity", position = "dodge")
-p + theme_bw() + scale_x_discrete(name="", labels = c("0-4","5-14","15-29","30-44","45-59","60-69","70-79","80+")) + scale_y_continuous(name="DALYs Nationwide (thousands)") + theme(axis.text.x  = element_text(angle = 90, vjust = 0.5, size = 8)) + facet_grid( . ~ disease, scales = "free_y")
+p + theme_bw() + scale_x_discrete(name="", labels = c("0-4","5-14","15-29","30-44","45-59","60-69","70-79","80+")) + scale_y_continuous(name="DALYs Nationwide (thousands)") + theme(axis.text.x  = element_text(angle = 270, vjust = 0.5, size = 8)) + facet_grid( . ~ disease, scales = "free_y")
 ```
 
-## Non-Travel METs
 
-```{r newMETs, echo = TRUE, eval = FALSE, echo = FALSE}
-newMETsFile <- "ATUS_to_METS_key.csv"
-
-newMETsFile <- system.file(newMETsFile, package="ITHIM")
-
-newMETs <- read.csv(file = newMETsFile, stringsAsFactors = FALSE, colClasses = c("character","character","character","character","numeric","character","character","character"))
-dataColumns <- c(1,5)
-D <- newMETs[,dataColumns]
-metaData <- newMETs[,-dataColumns]
-newMETs <- list(Data = D, metaData = metaData)
-activityCode <- ifelse(nchar(newMETs$Data$X6.digit.activity.code)==5,paste0("t0",newMETs$Data$X6.digit.activity.code),paste0("t",newMETs$Data$X6.digit.activity.code))
-
-rownames(newMETs$Data) <- activityCode
-rownames(newMETs$metaData) <- activityCode
-
-newMETs$metaData <- within(newMETs$metaData, {
-  Travel.related..Y.N. <- as.factor(Travel.related..Y.N.)
-})
-
-metKey <- newMETs$Data$AinsworthMETS
-names(metKey) <- activityCode
-
-
-```
-
-```{r readnewMETs, echo = TRUE, eval = FALSE, echo = FALSE}
-cpsFile <- "~/GHI/data/ATUS/atuscps_2015.dat"
-cps <- read.table(cpsFile, header=T, skip=0, sep="," )
-cps <- within(cps, {
-    TUCASEID <- as.character(TUCASEID)
-    TULINENO <- as.character(TULINENO)
-    GEREG <- as.factor(GEREG)
-    })
-cps <- subset(cps, TULINENO == "1")
-
-summaryFile <- "~/GHI/data/ATUS/atussum_2015.dat"
-summary <- read.table(summaryFile, header=T, skip=0, sep=",")
-metaDataColumns <- 1:24
-summaryList <- list(Data = summary[,-metaDataColumns], metaData = summary[,metaDataColumns])
-
-summaryList$metaData <- within(summaryList$metaData,{
-    TESEX <- as.factor(ifelse(TESEX == 1, "male", ifelse(TESEX == 2, "female",NA)))
-    AGECAT <- ifelse(TEAGE <5, "00-04",
-                     ifelse(TEAGE > 4 & TEAGE < 15, "05-14",
-                     ifelse(TEAGE > 14 & TEAGE < 30, "15-29",
-                     ifelse(TEAGE > 29 & TEAGE < 45, "30-44",
-                     ifelse(TEAGE > 44 & TEAGE < 60, "45-59",
-                     ifelse(TEAGE > 59 & TEAGE < 70, "60-69",
-                     ifelse(TEAGE > 69 & TEAGE < 80, "70-79", "80+"
-                            )))))))})
-
-
-```
-
-We shift the MET estimates by the minimum value so that the new minimum MET estimate is zero.
-
-```{r metKey, echo = TRUE, eval = FALSE, echo = FALSE}
-allActivities <- colnames(summaryList$Data)
-nonTravelActivities <- rownames(newMETs$metaData)[which(newMETs$metaData$Travel.related..Y.N. == "N")]
-nonTravelActivities <- nonTravelActivities[which(nonTravelActivities %in% allActivities)]
-
-activities <- nonTravelActivities
-
-metKeyVector <- (metKey[activities] - min(metKey, na.rm = TRUE))/60*7
-names(metKeyVector) <- activities
-metKeyMatrix <- matrix(metKeyVector, nrow = nrow(summaryList$Data), ncol = length(metKeyVector), byrow = TRUE)
-dimnames(metKeyMatrix) <- list( NULL, activities)
-
-
-METs <- data.frame(METs = rowSums(summaryList$Data[,activities] * metKeyMatrix[,activities], na.rm = TRUE), AGE = summaryList$metaData$TEAGE, SEX = summaryList$metaData$TESEX, AGECAT = summaryList$metaData$AGECAT, row.names = summaryList$metaData$TUCASEID )
-
-D <- merge(cps, METs, by.y = "row.names", by.x = "TUCASEID")
-ggplot(D, aes(x = METs, ..density.., colour = AGECAT)) + geom_freqpoly(binwidth = 10) + facet_grid( SEX ~ .) + labs(x = "Non-Travel Marginal MET-hrs./week", colour = "Age") + coord_cartesian(xlim = c(0, 400))
-
-```
-
-```{r parameters, eval = FALSE, echo = FALSE}
-parameters <- ddply(D, .(SEX, AGECAT), summarise,
-             mean = mean(METs, na.rm=T),
-             sd = sd(METs, na.rm=T)
-             )
-
-(METmatrix <- rbind(matrix(0,nrow = 2, ncol = 2), matrix(parameters$mean, ncol = 2)))
-
-colnames(METmatrix) <- c(as.character(parameters$SEX[1]),as.character(rev(parameters$SEX)[1]))
-
-METmatrix <- METmatrix[,c("male","female")]
-
-METmatrix <- METmatrix/METmatrix[3,2]
-
-```
 
 ```{r doseresponse, eval = TRUE, dev=c('pdf', 'png'), fig.width = fig.width, fig.asp = 1/phi, echo = TRUE, warning = FALSE}
 RR1vec <- unique(unlist(createActiveTransportRRs()))
 lapply(createActiveTransportRRs(),function(x) lapply(x, function(x) unique(c(x))))
 #~~~~~~~~~~~~~~~~~~~~~~~
-# Manual bullshit!
+# Manual bull$%#@!
 #~~~~~~~~~~~~~~~~~~~~~~~
 RR1vec <- RR1vec[RR1vec != 1]
 names(RR1vec) <- c("BreastCancer","ColonCancer.M","ColonCancer.F", "CVD", "Dementia", "Depression.young", "Depression.old", "Diabetes")
@@ -567,4 +524,59 @@ names(D) <- c("x","disease","RR")
 
 p <- ggplot(D, aes(x = x, y = RR, colour = disease))
 p + geom_line()  + theme_bw() + scale_y_continuous(name="Relative Risk") + scale_x_continuous(name="Physical Activity (MET-hrs./week)")
+```
+
+
+### Appendix
+
+Do it again, but with quintiles
+
+```{r ITHIMObjsQuintiles, eval = FALSE, dev=c('pdf', 'png'), fig.width = fig.width, fig.asp = 1/phi, echo = TRUE, warning = FALSE}
+DALYsTotal2 <- data.frame()
+ITHIMList <- list()
+
+ITHIM.default <- updateITHIM(ITHIM.default, "quantiles", seq(1, 9, by = 2)/10 )
+
+ITHIM.national <- ITHIM.default
+ITHIM.national <- updateITHIM(ITHIM.national, "muwt", muwtNational)
+ITHIM.national <- updateITHIM(ITHIM.national, "muct", muctNational)
+ITHIM.national <- updateITHIM(ITHIM.national, "Rwt", RwtNational)
+ITHIM.national <- updateITHIM(ITHIM.national, "Rct", RctNational)
+
+for (HHSTATE in stateVec){
+    ITHIMList[[HHSTATE]] <- ITHIM.default
+    ITHIMList[[HHSTATE]] <- updateITHIM(ITHIMList[[HHSTATE]], "muwt", muwtList[[HHSTATE]])
+    ITHIMList[[HHSTATE]] <- updateITHIM(ITHIMList[[HHSTATE]], "muct", muctList[[HHSTATE]])
+    ITHIMList[[HHSTATE]] <- updateITHIM(ITHIMList[[HHSTATE]], "Rwt", RwtList[[HHSTATE]])
+    ITHIMList[[HHSTATE]] <- updateITHIM(ITHIMList[[HHSTATE]], "Rct", RctList[[HHSTATE]])
+    ITHIMList[[HHSTATE]] <- updateITHIM(ITHIMList[[HHSTATE]], "GBD", ITHIM.national$parameters$GBD)
+  }
+
+for( muNonTravel in seq(0, upper, by = wd)){
+
+  rm(DALYs)
+
+  for (HHSTATE in stateVec){
+    ITHIMList[[HHSTATE]] <- updateITHIM(ITHIMList[[HHSTATE]], "muNonTravel", muNonTravel)
+  }
+
+  ITHIM.national <- updateITHIM(ITHIM.national, "muNonTravel", muNonTravel)
+
+  DALYs <- lapply(ITHIMList, sumDALY, ITHIM.baseline = ITHIM.national)
+  DALYs <- data.frame(State = names(DALYs), muNonTravel = muNonTravel, DALY = unlist(DALYs))
+  DALYsTotal2 <- rbind(DALYsTotal2, DALYs)
+}
+
+DALYsTotal2 <- within(DALYsTotal2, {
+  State <- factor(State, levels = stateVecOrdered)
+})
+
+DALYsTotal <- rbind(data.frame(DALYsTotal,quints="Percentiles"), data.frame(DALYsTotal2,quints="Quintiles"))
+
+p <- ggplot(DALYsTotal, aes(x = muNonTravel, y = DALY/1e3, colour = State))
+
+p + stat_smooth( method = loess) + theme_bw() + scale_x_continuous(name="Mean Non-Travel METs (MET-hrs./week) (Referent Group)") + scale_y_continuous(name="Change in National DALYs (Thousands)") + coord_cartesian(xlim = c(0, upper)) + facet_grid( . ~ quints)
+
+p + stat_smooth( method = loess) + theme_bw() + scale_x_continuous(name="Mean Non-Travel METs (MET-hrs./week) (Referent Group)") + scale_y_continuous(name="Change in National DALYs (Thousands)") + coord_cartesian(xlim = c(0, upper)) + geom_point() + facet_grid( . ~ quints)
+
 ```
