--- a/methodsPaper/tex/materialsAndMethods.Rnw
+++ b/methodsPaper/tex/materialsAndMethods.Rnw
@@ -1,17 +1,16 @@
-As with the original ITHIM implementation we employed a comparative
-risk analysis (CRA) across scenarios defined by mean active
-transportation time, i.e., walking and cycling.  To do so we
-investigate the proportional change in national disease burden between
-the baseline model and a given alternative scenario, i.e., the
-population attributable fraction, $\af$.  The population attributable
-fraction is defined below and computed for each disease included in
-the model, namely Breast Cancer, Colon Cancer, Depression, Dementia,
-Diabetes and Cardiovascular disease.  For readability we omit an index
-indicating disease.
+\Sexpr{1=1}
+As with the original ITHIM implementation we employ a comparative risk
+analysis (CRA) across scenarios defined by mean active transportation
+time, i.e., walking and cycling.  To do so we estimate the
+proportional change in disease burden between a baseline model and an
+alternative scenario, namely the population attributable fraction,
+$\af$.  The population attributable fraction is defined below and
+computed for each disease included in the model.
 
 \begin{equation}
-\af = \frac{\int \! R(x)P(x) \, \mathrm{d}x  - \int \! R(x)Q(x) \,
-  \mathrm{d}x}{\int \! R(x)P(x) \, \mathrm{d}x} \label{paf}
+\af_j = \frac{\int \! R_j(x)P(x) \, \mathrm{d}x  - \int \! R_j(x)Q(x) \,
+  \mathrm{d}x}{\int \! R_j(x)P(x) \, \mathrm{d}x} \approx 1 - \frac{{\displaystyle \sum_{i=1}^n} R_j(x_i^\prime)}{{\displaystyle \sum_{i=1}^n} R_j(x_i)}  = 1 - \delta_j % = 1 - \frac{{\displaystyle \sum_{i=1}^n} e^{-\alpha \sqrt{x_i^\prime}}}{{\displaystyle \sum_{i=1}^n} e^{-\alpha \sqrt{x_i}}}
+  \label{paf}
 \end{equation}
 
 Here $R(x)$ represents the risk when the individual has exposure $x$,
@@ -19,7 +18,11 @@ physical activity (\mets).  $P(x)$ and $Q(x)$ denote the population
 density of individuals with exposure $x$, in the baseline and
 alternate scenarios, respectively.  The exposure variable, $x$, is
 modeled as the sum of two independent random variables, travel-related
-and non-travel-related physical activity.
+and non-travel-related physical activity.  $\mathbf{x}$ and
+$\mathbf{x}^\prime$ represent the quantiles for the exposure
+distribution in baseline and alternative scenarios, respectively.
+$\delta_j$ is the proportional burden for disease $j$ in the alternate
+scenario.
 
 \paragraph{Non-Travel-Related Physical Activity}
 
@@ -32,25 +35,6 @@ with a \logNormal{} distribution.  The age-sex specific mean ratios,
 $r_{ij} = \frac{\mu_{ij}}{\mu_0}$ and $\gamma$ are estimated from the
 American Time USe Survey data \cite{ATUS}.
 
-% latex table generated in R 3.3.1 by xtable 1.8-2 package
-% Tue Nov  8 09:38:46 2016
-\begin{table}[ht]
-\centering
-\begin{tabular}{rrr}
-  \hline
- & M & F \\
-  \hline
-0-4 & 0.00 & 0.00 \\
-  5-14 & 0.00 & 0.00 \\
-  15-29 & 0.97 & 1.00 \\
-  30-44 & 1.04 & 1.12 \\
-  45-59 & 0.95 & 0.99 \\
-  60-69 & 0.90 & 0.94 \\
-  70-79 & 0.83 & 0.88 \\
-  80+ & 0.72 & 0.77 \\
-   \hline
-\end{tabular}
-\end{table}
 
 \paragraph{Travel-Related Physical Activity}
 
@@ -62,12 +46,13 @@ Travel-related exposure is estimated from active transport time using
 assumptions about how much physical activity is required for cycling
 and walking.
 
-\paragraph{Estimation of Disease Burden}
 
-To estimate the disease burden we first approximate the population
-attributable fraction through a discretization of the integral in
-equation \ref{paf}.
 
+%To estimate the disease burden we first approximate the population
+%attributable fraction through a discretization of the integral in
+%equation \ref{paf}.
+
+\paragraph{Non-Travel-Related Physical Activity}
 
 With a simulated distribution for total physical activity in hand we
 compute the empirical percentiles in the baseline and alternate
@@ -75,17 +60,20 @@ scenarios, $\mathbf{x}$ and $\mathbf{x}^\prime$. The proportional
 change in disease burden, $\delta$, may be approximated as follows,
 where $R$ is the risk function for total activity.
 
-\begin{equation}
-\delta = 1 - \af \approx \frac{\sum_{i=1}^n R(x_i)}{\sum_{i=1}^n R(x_i^\prime)}
-\end{equation}
+%% \begin{equation}
+%% \delta = 1 - \af \approx \frac{{\displaystyle \sum_{i=1}^{n}} R(x_i)}{{\displaystyle \sum_{i=1}^{n}} R(x_i^\prime)}
+%% \end{equation}
+
+
+\paragraph{Estimation of Disease Burden}
 
 The disease burden, in this case DALYs, is found for each of the
-percentiles using equation \ref{burden}, using $B_0$, the overall nation-wide burden for
-the baseline.  The overall burden is then computed as the sum across
-quintiles, $B=\sum_{j=1}^n B_j$.
+quantiles using equation \ref{burden} using $B_0$, the overall
+nation-wide burden for the baseline.  The overall burden is then
+computed as the sum across quintiles, $B=\sum_{j=1}^n B_j$.
 
 \begin{equation}
-B_j = \delta B_0\frac{\RR_j}{\sum_{k=1}^n \RR_k}\label{burden}
+B_j = \delta B_0\frac{\RR_j}{\sum_{k=1}^n \RR_j}\label{burden}
 \end{equation}
 
 \paragraph{Risk Functions}
@@ -94,7 +82,7 @@ We assign risk based on dose-response curves for each of the diseases
 included in the model.
 
 \begin{equation}
-\RR(x) = \mathrm{e}^{-r \tilde{x}}
+\RR_j(x) = \mathrm{e}^{-\alpha_j \tilde{x}}
 \end{equation}
 
 where $\tilde{x} = x^k$, $k=\frac{1}{2}$ and $r$ varies by age-sex
@@ -134,9 +122,9 @@ parameters including the active travel time and non-travel activity.
     \caption{}\label{fig2}
 \end{figure}
 
-\begin{figure}[t]
+\begin{sidewaysfigure}[t]
   \centerline{\includegraphics[width=\textwidth]{./figures/fig3.pdf}}
   \caption{Estimates for disease burden nationwide in terms of thousands of
     DALYs for each of the six diseases included in the model.
   }\label{fig3}
-\end{figure}
+\end{sidewaysfigure}
