--- a/misc/pomodoro.org
+++ b/misc/pomodoro.org
@@ -1,19 +1,18 @@
 ==
 
-Schedule
-
-* 9:30 -  9:45  #1
-* 9:53 -  10:08 #2
-* 10:10 - 10:25 #3
-* 10:25 - 10:45 (Long Break)
-* 10:45 - 11:00 #4
-* 11:05 - 11:20 #5
-* 11:25 - 11:40 #6
-* 11:40 - 12:00 (Long Break)
-* 12:00 - 12:15 #7
-* 12:20 - 12:35 #8
-* 12:40 - 12:55 #9
-
+* Schedule
+15 min pomodoros, 5 min short break, 20 min long break
+** 9:30 -  9:45  #1
+** 9:53 -  10:08 #2
+** 10:10 - 10:25 #3
+** 10:25 - 10:45 (Long Break)
+** 10:45 - 11:00 #4
+** 11:05 - 11:20 #5
+** 11:25 - 11:40 #6
+** 11:40 - 12:00 (Long Break)
+** 12:00 - 12:15 #7
+** 12:20 - 12:35 #8
+** 12:40 - 12:55 #9
 
 * TODO Reply to James abut visit (0.5)
 * TODO Comment on ITHIM survey (0.5)
@@ -32,21 +31,22 @@ Read up on the change that is happening 12/1.
 * TODO Six month plan
 
 Pomodoros
+
 * Create Pomodoro List [X]
 * Create deliverables document [ ] [ ]
 * Email Jonathan previous appointment letter & Email Karen Aune [ ]
-* Misc [ ] 
+* Misc [ ]
 ** Clean UW Inbox
 ** Get in touch with Y & L
 ** Email Jonathan/Monet about Cambridge trip arrangements
 * Update methods paper To-Do List [ ]
-* Edit methods paper [7] 
+* Edit methods paper [7]
 ** Materials & Methods [ ] [ ]
 ** Introduction & Abstract [ ]
 ** Results [ ] [ ]
 ** Conclusions [ ] [ ]
 * Create a six-month plan for work at GHI [ ]
-* MI and WI vs. CA and NY analysis
+* MI and WI vs. CA and NY analysis [X] [X] [ ]
 * Reply to James abut visit
 
 * ITHIM Suite of R Packages
