--- a/methodsPaper/tex/abstract.tex
+++ b/methodsPaper/tex/abstract.tex
@@ -1,4 +1,4 @@
-Comparative risk assessment analyses to quantify the health potential
+Comparative risk assessments to quantify the health potential
 of active transportation, e.g., walking and cycling, have been
 performed in the United States on a limited basis. Current
 methodologies, which rely on extensive data collection and user
@@ -17,4 +17,4 @@ environment for exploring the relationship between active
 transportation and positive health outcomes.  A web-based
 user-interface is available for users who want a first estimate for
 the impact active transportation has on their
-state/county/tract/region.
+state/region.
