--- a/methodsPaper/tex/materialsAndMethods.tex
+++ b/methodsPaper/tex/materialsAndMethods.tex
@@ -5,8 +5,8 @@ investigate the proportional change in national disease burden between
 the baseline model and a given alternative scenario, i.e., the
 population attributable fraction, $\af$.  The population attributable
 fraction is defined below and computed for each disease (ICD-10) included in
-the model, namely Breast Cancer (C50), Colon Cancer (C18-C21), Depression (??), Dementia (G30),
-Diabetes (E10-E14) and Cardiovascular disease (I10, I12, I15, I20-I25, I30-I31, I33, I40).  For readability we omit an index
+the model, namely Breast Cancer (C50), Colon Cancer (C18-C21), Dementia (G30),
+Diabetes (E10-E14) and Cardiovascular disease (I10, I12, I15, I20-I25, I30-I31, I33, I40).  We also include the disability impacts of depression, though it is not listed as a cause of death in CDC's data. For readability we omit an index
 indicating disease.
 
 \begin{equation}
